@@ -69,6 +69,7 @@ _OPTIONS = (
  ( '', 0, 'unpacklen', 'unpackLength', 'check if unpacking sequence with the wrong length'),
  ( '', 0, 'badexcept', 'badExceptions', 'check if raising or catching bad exceptions'),
  ('4', 0, 'noeffect', 'noEffect', 'check if statement appears to have no effect'),
+ ('',  0, 'modulo1', 'modulo1', 'check if using (expr % 1), it has no effect on integers and strings'),
      ]),
     ('Possible Errors', [
  ('r', 0, 'returnvalues', 'checkReturnValues', 'check consistent return values'),
@@ -229,6 +230,7 @@ class Config :
         self.badExceptions = 1
         self.noEffect = 1
         self.deprecated = 1
+        self.modulo1 = 1
 
         self.unusedNames = _DEFAULT_UNUSED_LIST
         self.variablesToIgnore = _DEFAULT_VARIABLE_IGNORE_LIST
