@@ -29,5 +29,4 @@ test_input/test22.py:70: Local variable (c) not used
 test_input/test22.py:74: Local variable (a) not used
 test_input/test22.py:74: Local variable (b) not used
 test_input/test22.py:79: ... % 1 is generally constant
-test_input/test22.py:80: ... % 1 is generally constant
 test_input/test22.py:81: ... % 1 is generally constant
