@@ -1,4 +1,6 @@
 Version 0.8.12   - xx October 2002
+  * Add --modulo1 option to warn when using (expr % 1),
+    which is constant when expr is an integer or string
   * Add -4/--noeffect option to disable warnings for 'Statement has no effect'
   * self is not first argument warning can be disabled with -S/--self ''
   * Don't print duplicate warnings when importing pychecker
